fixed javascript paths

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/persons.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/persons.jspx
@@ -25,14 +25,14 @@
 		</jsp:attribute>
 
 		<jsp:attribute name="headerExt">
-			<script type="text/javascript" src="/resources/javascript/bs/animatescroll.js"><!-- --></script>
-			<script type="text/javascript" src="/resources/javascript/bs/animate-scroll-affix.js"><!-- --></script>
+			<script type="text/javascript" src="${resdir}/javascript/animatescroll.js"><!-- --></script>
+			<script type="text/javascript" src="${resdir}/javascript/animate-scroll-affix.js"><!-- --></script>
 
-			<script type='text/javascript' src='/resources/typeahead.js/js/typeahead.bundle.js'><!-- keep me --></script>
-			<script type='text/javascript' src='/resources/javascript/person/personAutocomplete.js'><!-- keep me --></script>
-			<script type='text/javascript' src='/resources/javascript/person/autocompleteSearchPerson.js'><!-- keep me --></script>
+			<script type="text/javascript" src="${resdir}/typeahead.js/js/typeahead.bundle.js"><!-- keep me --></script>
+			<script type="text/javascript" src="${resdir}/javascript/person/personAutocomplete.js"><!-- keep me --></script>
+			<script type="text/javascript" src="${resdir}/javascript/person/autocompleteSearchPerson.js"><!-- keep me --></script>
 			
-			<link rel="stylesheet" type="text/css" href='/resources/typeahead.js/css/typeahead.css'/>
+			<link rel="stylesheet" type="text/css" href="${resdir}/typeahead.js/css/typeahead.css"/>
 		</jsp:attribute>
 
 		
