added tooltips for spammer button and added links to access the filtered posts of the user

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/user.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/user.jspx
@@ -55,7 +55,7 @@
 			<sidebar:socializer command="${command}" />
 			
 			<c:if test="${isAdmin}">
-				Spammer: <adminUser:spamActions user="${command.user}" />
+				spammer: <adminUser:spamActions user="${command.user}" />
 			</c:if>
 			
 			<!-- Did you know? -->
