--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -455,12 +455,16 @@ p.url {
 	-webkit-line-clamp: 1;
 	-webkit-box-orient: vertical;
 	font-size: 110%;
+	
+	.label {
+		font-weight: 500;
+		display: inline-block;
+	}
+	
+	.label-tag {
+		margin-right: 4px;
+	}
 }
-
-.ptags .label {
-	font-weight: 500;
-}
-
 .pmeta {
 	font-size: 12px;
 }
