Add hidden field for registrationLog to register user.jspx

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/register/user.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/register/user.jspx
@@ -61,6 +61,8 @@
 								
 								<bsform:input labelColSpan="3" path="registerUser.email" labelKey="user.settings.email" placeholderLikeLabel="true" inputGroupFaIcon="fa-envelope" noHelp="true" />
 								
+								<form:hidden path="registerUser.registrationLog" />
+								
 								<hr />
 								
 								<bsform:input labelColSpan="3" path="registerUser.homepage" labelKey="user.settings.homepage" placeholderLikeLabel="true" inputGroupFaIcon="fa-globe" noHelp="true" />
