less var for header background color

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-color.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-color.less
@@ -29,6 +29,7 @@
 
 @light-border-color: #DDDDDD;
 
+@header-background-color: #FFFFFF;
 @sidebar-color: #d2d7f9;
 
 @container-navi-border: #005588;
