--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -81,7 +81,7 @@ ul.dropdown-menu.list-options > li > span {
 }
 
 .container.header {
-	background: #FFFFFF;
+	background: @header-background-color;
 	border-top: none;
 	border-bottom: none;
 	margin-top: 30px;
