modal login forms

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1309,6 +1309,33 @@ ul#urlList {
 	padding-left: 0;
 }
 
+#loginModal {
+	top: 20%;
+	outline: none;
+	
+	.modal-header {
+		border: none;
+		padding-bottom: 0px;
+	}
+	
+	p.authHelp {
+		font-size: 100%;
+		color: #333333;
+	}
+	
+	.modal-dialog {
+		width: 450px;
+	}
+	
+	fieldset {
+		margin: 0px;
+	}
+	
+	form a {
+		font-size: 90%;
+	}
+}
+
 #suggestionBox {
 	position:absolute;
 	display:none;
