added layout settings for home header (used by UB Stuttgart)

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -994,6 +994,17 @@ fieldset {
 	line-height: 120%;
 }
 
+.jumbotron {
+	hr {
+		border-top: 1px solid #ddd;
+		margin-top: -5px;
+	}
+	
+	hr.homelogo {
+		margin-top: -17px;
+	}
+}
+
 .container.footer hr {
 	box-sizing: border-box;
 	box-shadow: #FFF 0px 1px 1px 0px;
