removed duplicate role column

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -862,6 +862,10 @@ h4.pub-details {
 	padding: 5px 5px 5px 0;
 }
 
+table a.img-thumbnail {
+	margin-right: 10px;
+}
+
 /* Abstract */
 .morecontent {
 	display:none;
