working more/less list actions

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -625,6 +625,10 @@ div#sidebar {
 	}
 }
 
+.more-list span.desc {
+	padding-left: 3px;
+}
+
 .sidebar-setting-box {
 	position: relative;
 	top: -5px;
