transfered changes to moved files (2)

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/edit/edittags.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/edit/edittags.jspx
@@ -153,7 +153,7 @@
 				headingTitleKey="tagrelations.user.title"
 				/>
 
-			<sidebar:sidebarTagCloudItem requPath="user/${command.context.loginUser.name}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" />
+			<sidebar:sidebarTagCloudItem requPath="user/${command.context.loginUser.name}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" tagSizeMode="user" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" />
 
 			<script type="text/javascript">
 <![CDATA[
