--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupSettings.jspx
@@ -57,10 +57,7 @@
 			
 			<groupsettings:userlists group="${group}" />
 			
-			<groupsettings:delete group="${group}" />
-			
-<!-- TODO: Adapt AjaxCvController to CV modification by other users (e.g. admin - - > group) -->
-<!--			<settings:cv command="${command}" isGroup="${true}"/> -->
+			<!--<groupsettings:delete group="${group}" />-->
 		</jsp:attribute>
 
 	</layout:tabLayout>
