Removed imports from settings
- Removed import from settings
- Renamed tab 'imports' to 'JabRef layout file'

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/settings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/settings.jspx
@@ -51,7 +51,7 @@
 			
 			<settings:settings command="${command}"/>
 			
-			<settings:import command="${command}"/>
+			<settings:jabRef command="${command}"/>
 			
 			<settings:cv command="${command}"/>
 			
