working on community page
fixed bug in new groups viewable selector

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -25,7 +25,7 @@ ul.media-list > li.form {
 	margin-top: 20px;
 }
 
-li.comment {
+li.comment, li.review {
 	.bookCiteBox, .citeBox {
 		font-size: 85%;
 		
@@ -55,6 +55,10 @@ li.comment {
 	
 	.info {
 		font-size: 75%;
+		
+		.groups {
+			margin-left: 4px;
+		}
 	}
 	
 	.actions {
@@ -65,7 +69,7 @@ li.comment {
 		}
 	}
 	
-	.commenter {
+	.commenter, .reviewer {
 		font-weight: bold;
 	}
 	
